--- a/portifolios.html
+++ b/portifolios.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Portifólios</h1>
+    Buscar portifólio: <input type="text" name="buscarPortifolio" id="buscarPortifolio" value="nome">
 </body>
 </html>
