--- a/portifolios.html
+++ b/portifolios.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Portifólios</h1>
+    <input type="button" value="Criar portifólio" name="criarPortifolio" id="criarPortifolio"><br><br>
     Buscar portifólio: <input type="text" name="buscarPortifolio" id="buscarPortifolio" placeholder="nome">
 </body>
 </html>
