--- a/criarPortifolio.html
+++ b/criarPortifolio.html
@@ -1,18 +1,13 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portifólios</title>
-    </head>
-    <body>
-        <h1>Portifólios</h1>
-        <a href="criarPortifolio.html">Criar portifólio</a><br><br>
-
-        Insira o seu ID de usuário do Discord <br>
-        <input type="number" name="ID" id="ID" required><br><br>
-
-        Insira o seu ID de usuário da Roblox (opcinal caso não tenha) <br>
-        <input type="number" name="ID" id="ID"><br><br>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Criar portífolio</title>
+</head>
+<body>
+    <h1>Vamos criar o seu primeior portifólio</h1>
+    <input type="button" value="Criar portifólio" name="criarPortifolio" id="criarPortifolio"><br><br>
+    Buscar portifólio: <input type="text" name="buscarPortifolio" id="buscarPortifolio" placeholder="nome">
+</body>
+</html>
