--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Roblox Studio Brasil</h1>
-    <a href="portifolios.html">Portifólios</a><br>
-    <a href="competicoes.html">Competições</a><br>
-    <a href="inventario.html">Inventário</a><br>
+    <a href="portifolios.html">Portifólios</a><br><br>
+    <a href="competicoes.html">Competições</a><br><br>
+    <a href="inventario.html">Inventário</a><br><br>
 </body>
 </html>
