--- a/portifolios.html
+++ b/portifolios.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólios</title>
-</head>
-<body>
-    <h1>Portifólios</h1>
-    <a href="criarPortifolio.html">Criar portifólio</a><br><br>
-    Buscar portifólio: <input type="text" name="buscarPortifolio" id="buscarPortifolio" placeholder="nome">
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portifólios</title>
+    </head>
+    <body>
+        <h1>Portifólios</h1>
+        <a href="criarPortifolio.html">Criar portifólio</a><br><br>
+
+        Buscar Portifólios <br>
+        <input type="text" name="buscarPortifolios" id="buscarPortifolios">
+    </html>
