--- a/criarPortifolio.html
+++ b/criarPortifolio.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Vamos criar o seu primeior portifólio</h1>
-    <input type="button" value="Criar portifólio" name="criarPortifolio" id="criarPortifolio"><br><br>
-    Buscar portifólio: <input type="text" name="buscarPortifolio" id="buscarPortifolio" placeholder="nome">
+ 
+    Insira o seu ID de usuário do Discord <br>
+    <input type="number" name="ID" id="ID" required><br><br>
+
+    Insira o seu ID de usuário da Roblox (opcinal caso não tenha) <br>
+    <input type="number" name="ID" id="ID"><br><br>
 </body>
 </html>
