--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página inicial</title>
+    <title>Roblox Studio Brasil</title>
+    <link rel="shortcut icon" href="img/20250805_170705_0000_1.webp">
 </head>
 <body>
-    <h1>Roblox Studio Brasil</h1>
-    <a href="portifolios.html">Portifólios</a><br><br>
-    <a href="competicoes.html">Competições</a><br><br>
-    <a href="inventario.html">Inventário</a><br><br>
+    <p>Em produção, volte mais tarde</p>
 </body>
 </html>
