--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <h1>Logo</h1>
+                <h1>Roblox Studio BR</h1>
             </div>
             <div class="nav-list">
                 <ul>
