--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
             <div class="login-button">
-                <button><a href="#">Entrar</a></button>
+                <button><a href="https://discord.gg/tY4Srmdn">Entrar</a></button>
             </div>
 
             <div class="mobile-menu-icon">
