--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"> Sobre</a></li>
                 </ul>
