--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <h1>Roblox Studio BR</h1>
+                <h1>Roblox Studio Brasil</h1>
             </div>
             <div class="nav-list">
                 <ul>
@@ -32,7 +32,7 @@
         </nav>
         <div class="mobile-menu">
             <ul>
-                <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
             </ul>
