--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"> Sobre</a></li>
+                    <li class="nav-item"><a href="sobre.html" class="nav-link"> Sobre</a></li>
                 </ul>
             </div>
             <div class="login-button">
@@ -33,8 +32,7 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                <li class="nav-item"><a href="sobre.html" class="nav-link">Sobre</a></li>
             </ul>
 
             <div class="login-button">
