--- a/sobre.html
+++ b/sobre.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,6 @@
     <link rel="icon" href="img/icon.webp">
     <title>Sobre</title>
 </head>
-
 <body>
     <header>
         <nav class="nav-bar">
@@ -25,7 +23,6 @@
             <div class="login-button">
                 <button><a href="https://discord.gg/tY4Srmdn">Entrar</a></button>
             </div>
-
             <div class="mobile-menu-icon">
                 <button onclick="menuShow()"><img class="icon" src="img/menu_white_36dp.svg" alt=""></button>
             </div>
@@ -35,15 +32,31 @@
                 <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
                 <li class="nav-item"><a href="sobre.html" class="nav-link">Sobre</a></li>
             </ul>
-
             <div class="login-button">
-                <button><a href="#">Entrar</a></button>
+                <button><a href="https://discord.gg/tY4Srmdn">Entrar</a></button>
             </div>
         </div>
     </header>
 
+    <section class="sobre-nos">
+        <div class="container">
+            <h2>Sobre Nós</h2>
+            <p><strong>Roblox Studio Brasil</strong> é uma comunidade dedicada a reunir e apoiar desenvolvedores brasileiros que utilizam o Roblox Studio para criar experiências incríveis. Nosso objetivo é proporcionar um ambiente organizado, colaborativo e motivador para todos os níveis — desde iniciantes até profissionais experientes.</p>
+            
+            <p>Aqui, você pode:</p>
+            <ul>
+                <li>📁 Criar e divulgar seu portfólio para ser descoberto por outros desenvolvedores ou recrutadores.</li>
+                <li>🎯 Participar de competições e desafios criativos com premiações e destaque na comunidade.</li>
+                <li>🤝 Usar o sistema de recrutamento e busca por equipe para montar times de desenvolvimento.</li>
+                <li>📊 Acompanhar o inventário de recursos do servidor, incluindo Robux utilizados em eventos e premiações.</li>
+                <li>🧠 Evoluir tecnicamente com nosso sistema de níveis de habilidade e cargos especializados (Scripters, Builders, Modeladores, Animadores, GUI Designers e mais).</li>
+            </ul>
+            
+            <p>Nossa missão é fortalecer a cena de desenvolvimento Roblox no Brasil com transparência, apoio mútuo e oportunidades reais de crescimento.</p>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
-<!-- FEITO POR: LARISSA V. KICH  -->
-
+<!-- FEITO POR: LARISSA V. KICH -->
 </html>
